--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,5 @@ build_flags=
 monitor_speed = 115200
 monitor_echo = yes
 monitor_filters = send_on_enter
+lib_deps =
+  madhephaestus/ESP32Servo@^3.0.6
